buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("net.serenity-bdd:serenity-gradle-plugin:3.3.4")
    }
}

plugins {
    id 'io.github.jumosqu12.screenplayarchitecture' version '2.0.1'
    id 'java'
    id 'eclipse'
    id 'idea'
}

apply plugin: 'net.serenity-bdd.serenity-gradle-plugin'

group 'co.edu.udea.certificacion.advshop'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

ext {
    serenityVersion = '4.1.0'
    serenityCucumberVersion = '4.1.0'
    lombokVersion = '1.18.42'      // ← updated
    junit = '4.13.2'
    hamcrest = '1.3'
    serenityWebVersion = '4.1.0'
}

dependencies {
    implementation "net.serenity-bdd:serenity-core:$rootProject.ext.serenityVersion"
    implementation "net.serenity-bdd:serenity-junit:$rootProject.ext.serenityVersion"
    implementation "net.serenity-bdd:serenity-screenplay:$rootProject.ext.serenityVersion"
    implementation "net.serenity-bdd:serenity-cucumber:$rootProject.ext.serenityCucumberVersion"
    implementation "net.serenity-bdd:serenity-screenplay-webdriver:$rootProject.ext.serenityWebVersion"
    implementation 'org.slf4j:slf4j-simple:2.0.5'
    implementation 'org.apache.commons:commons-dbcp2:2.12.0'

    testImplementation "junit:junit:$rootProject.ext.junit"
    testImplementation "org.hamcrest:hamcrest-all:$rootProject.ext.hamcrest"
    testImplementation "io.github.bonigarcia:webdrivermanager:5.4.1"

    // Lombok — all using the same version now
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

// Required for Java 23+ annotation processing
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-proc:full']
}

tasks.named('test') {
    useJUnit()
    include '**/runners/**'
}